# OrderedJobKataHaskell

./: OrderedJobs.cabal  README.md
src/: OrderJobs.hs
test/: OrderJobsSpec.hs
