name:                OrderedJobs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/carstenkoenig/OrderedJobsHaskell#readme
license:             BSD3
license-file:        LICENSE
author:              Carsten König
maintainer:          carsten@gettingsharper.de
copyright:           2017 Carsten König
category:            Dojo
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     OrderJobs
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , transformers
  default-language:    Haskell2010

test-suite OrderedJobs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       OrderJobsSpec
  build-depends:       base
                     , OrderedJobs
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/carstenkoenig/OrderedJobsHaskell
